# Atlus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md
docs/: ARCHITECTURE_COMPLETE_SUMMARY.md  ATLUS_IR_SPEC_V1.md  CACHING_BOUNDARY_CONTRACT.md  CONTRACT_INDEX.md  INDEX_SEMANTIC_CONTRACT.md  IR_IDENTITY_CONTRACT.md  IR_TRANSITION_GUIDE.md  PIPELINE_INVALIDATION_MATRIX.md  TYPE_SYSTEM_BEHAVIOR.md
include/core/: address_space.h  analysis_pipeline.h  analyzer.h  cfg_builder.h  decompiler.h  diff_engine.h  disassembler.h  disassembly_cache.h  error.h  formatter.h  ghidra_decompiler.h  index.h  invalidation.h  ir.h  ir_governance.h  ir_identity.h  ir_serialization.h  loader.h  md5.h  pattern_scanner.h  pe_import_export.h  pe_parser.h  query.h  revng_decompiler.h  sha256.h  string_analyzer.h  structure_analyzer.h  switch_analyzer.h  thread_pool.h  type_system.h  xref_analyzer.h
scripts/: build.ps1  build.sh  setup.ps1  setup.sh
src/core/: address_space.cpp  analysis_pipeline.cpp  analyzer.cpp  bookmarks.cpp  cfg_builder.cpp  decompiler.cpp  diff_engine.cpp  disassembler.cpp  disassembly_cache.cpp  elf_macho_parsers.cpp  formatter.cpp  ghidra_decompiler.cpp  ida_integration.cpp  index.cpp  invalidation.cpp  ir.cpp  ir_governance.cpp  ir_identity.cpp  ir_serialization.cpp  loader.cpp  md5.cpp  patch_engine.cpp  pattern_scanner.cpp  pe_import_export.cpp  pe_parser.cpp  query.cpp  revng_decompiler.cpp  sha256.cpp  string_analyzer.cpp  structure_analyzer.cpp  switch_analyzer.cpp  thread_pool.cpp  type_system.cpp  xref_analysis.cpp  xref_analyzer.cpp
src/platform/: dialogs.cpp  dialogs.h
src/ui/: gui_state.cpp  gui_state.h  main.cpp  main_old.cpp  menu_bar.cpp  panels.h  panels_aob.cpp  panels_disasm.cpp  panels_functions.cpp  panels_hex.cpp  panels_log.cpp  panels_pseudocode.cpp  panels_sections.cpp  settings.cpp
src/ui/qt/: decompiler_worker.cpp  decompiler_worker.h  main.cpp  mainwindow.cpp  mainwindow.h  theme.cpp  theme.h
src/ui/qt/dialogs/: analysis_options_dialog.cpp  analysis_options_dialog.h  settings_dialog.cpp  settings_dialog.h
src/ui/qt/models/: aob_model.cpp  aob_model.h  disassembly_model.cpp  disassembly_model.h  functions_model.cpp  functions_model.h  imports_model.cpp  imports_model.h  sections_model.cpp  sections_model.h  xrefs_model.cpp  xrefs_model.h
src/ui/qt/panels/: aob_panel.cpp  aob_panel.h  callgraph_panel.cpp  callgraph_panel.h  cfg_panel.cpp  cfg_panel.h  disassembly_panel.cpp  disassembly_panel.h  functions_panel.cpp  functions_panel.h  hex_panel.cpp  hex_panel.h  hex_view.cpp  hex_view.h  imports_panel.cpp  imports_panel.h  pseudocode_panel.cpp  pseudocode_panel.h  sections_panel.cpp  sections_panel.h  xrefs_panel.cpp  xrefs_panel.h
vs/: Atlus.sln  Atlus.vcpkg.props  Directory.Build.props  atlus_core.vcxproj  atlus_gui.vcxproj  atlus_imgui.vcxproj  atlus_resources.rc  resource.h  vcpkg.json
